--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: cadetblue;
+}
 .App {
-  text-align: center;
+  max-width: 950px;
+  margin: 0 auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App h1 {
+  font-size: 3rem;
+  margin: 4rem 0 0 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App p {
+  color: #1a1a11;
+  font-size: 1.5rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.input-wrapper {
+  position: relative;
+}
+.input-wrapper label {
+  display: inline-block;
+  padding: 8px 12px;
+  cursor: pointer;
+  border-radius: 4px;
+  background: coral;
+  color: #fff;
+}
+.input-wrapper input[type="file"] {
+  position: absolute;
+  left: 26px;
+  top: 6px;
+  z-index: -1;
+  font-size: 15px;
+  color: #1a1a11;
+}
+.result {
+  margin-top: 4rem;
+  display: grid;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.result .box-image {
+  background: coral;
+  height: 100%;
+  padding: 1rem;
+}
+.result .box-p {
+  background: #ddd;
+  height: 100%;
+  padding: 1rem;
+}
+.result img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.result p {
+  line-height: 1.5rem;
+  font-size: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (min-width: 1000px) {
+    .result {
+        grid-template-columns: repeat(2,1fr);
+      }   
 }
