--- a/src/Product.css
+++ b/src/Product.css
@@ -4,6 +4,7 @@
 }
 .product-container {
     display: flex;
+  flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 6em 6em 2.5em 6em;
     gap: 6em;
